--- a/roles/kubernetes/master/templates/kubeadm.config.j2
+++ b/roles/kubernetes/master/templates/kubeadm.config.j2
@@ -49,11 +49,11 @@ networking:
   dnsDomain: {{ dns_domain }}
 
 
----
-apiVersion: kubelet.config.k8s.io/v1beta1
-kind: KubeletConfiguration
+#---
+#apiVersion: kubelet.config.k8s.io/v1beta1
+#kind: KubeletConfiguration
 # kubelet specific options here
----
-apiVersion: kubeproxy.config.k8s.io/v1alpha1
-kind: KubeProxyConfiguration
+#---
+#apiVersion: kubeproxy.config.k8s.io/v1alpha1
+#kind: KubeProxyConfiguration
 # kube-proxy specific options here
