--- a/roles/kubernetes/master/templates/kubeadm.config.j2
+++ b/roles/kubernetes/master/templates/kubeadm.config.j2
@@ -7,7 +7,12 @@ bootstrapTokens:
   ttl: {{ token_ttl }}
 
 #localAPIEndpoint:
-#nodeRegistration:
+nodeRegistration:
+  kubeletExtraArgs:
+    hostname-override: {{ inventory_hostname }}
+    cgroup-driver: {{ cgroup_driver }}
+    network-plugin: {{ network_plugin }}
+    pod-infra-container-image: {{ pod_infra_container_image }}
 ---
 apiVersion: kubeadm.k8s.io/v1beta2
 kind: ClusterConfiguration
@@ -50,9 +55,27 @@ networking:
 
 
 #---
-#apiVersion: kubelet.config.k8s.io/v1beta1
-#kind: KubeletConfiguration
-# kubelet specific options here
+apiVersion: kubelet.config.k8s.io/v1beta1
+kind: KubeletConfiguration
+#  clusterDomain: {{ cluster_domain }}
+#  clusterDNS: {{ cluster_dns }}
+  maxPods: {{ max_pods }}
+  nodeStatusUpdateFrequency : {{ node_status_update_frequency }}
+  kubeAPIQPS: {{ kube_api_qps }}
+  kubeAPIBurst: {{ kube_api_burst }}
+  podPidsLimit: {{ pod_pids_limit }}
+  failSwapOn: {{ fail_swap_on }}
+  allowedUnsafeSysctls:
+  - kernel.msg*
+  - kernel.shm*
+  - kernel.sem
+  - net.*
+  - fs.mqueue.*
+
+
+#  systemReserved
+
+
 #---
 #apiVersion: kubeproxy.config.k8s.io/v1alpha1
 #kind: KubeProxyConfiguration
