--- a/roles/kubernetes/master/templates/kubeadm.config.j2
+++ b/roles/kubernetes/master/templates/kubeadm.config.j2
@@ -1,5 +1,23 @@
 ---
 apiVersion: kubeadm.k8s.io/v1beta2
+kind: InitConfiguration
+certificateKey: "{{ certificate_key }}"
+bootstrapTokens:
+- token: "{{ token }}"
+  description: "kubeadm bootstrap token"
+  ttl: "{{ token_ttl }}"
+
+#localAPIEndpoint:
+nodeRegistration:
+  name: "{{ inventory_hostname }}"
+  kubeletExtraArgs:
+    hostname-override: "{{ inventory_hostname }}"
+    cgroup-driver: "{{ cgroup_driver }}"
+    network-plugin: "{{ network_plugin }}"
+    pod-infra-container-image: "{{ pod_infra_container_image }}"
+
+---
+apiVersion: kubeadm.k8s.io/v1beta2
 kind: JoinConfiguration
 discovery:
   bootstrapToken:
