--- a/roles/kubernetes/master/templates/init.config.j2
+++ b/roles/kubernetes/master/templates/init.config.j2
@@ -60,12 +60,12 @@ etcd:
       name: "etcd-{{ inventory_hostname }}"
     serverCertSANs:
 {% for master_ip in groups["master"] %}
-- "{{ master_ip }}"
+      "- {{ master_ip }}"
 {% endfor %}
 
     peerCertSANs:
 {% for master_ip in groups["master"] %}
-- "{{ master_ip }}"
+      "- {{ master_ip }}"
 {% endfor %}
 
 networking:
