--- a/roles/kubernetes/master/templates/init.config.j2
+++ b/roles/kubernetes/master/templates/init.config.j2
@@ -31,7 +31,7 @@ apiServer:
     authorization-mode: "Node,RBAC"
     insecure-port: "8080"
     enable-swagger-ui: "true"
-    etcd-servers: "https://{{ groups.master.0 }}:2379,https://{{ groups.master.1 }}:2379,https://{{ groups.master.2 }}:2379"
+    etcd-servers: "{{ etcd_servers }}"
     v: "4"
   certSANs:
     - "{{ control_plane_endpoint }}"
@@ -57,7 +57,7 @@ etcd:
     imageTag: "3.4.3-0"
     dataDir: "/var/lib/etcd"
     extraArgs:
-      name: "etcd-{{ inventory_hostname }}"
+      listen-metrics-urls: "http://127.0.0.1:2381,http://{{ inventory_hostname }}:2381"
     serverCertSANs:
 {% for master_ip in groups["master"] %}
       - "{{ master_ip }}"
