--- a/roles/kubernetes/master/templates/init.config.j2
+++ b/roles/kubernetes/master/templates/init.config.j2
@@ -19,7 +19,7 @@ nodeRegistration:
 ---
 apiVersion: kubeadm.k8s.io/v1beta2
 kind: ClusterConfiguration
-kubernetesVersion: "{{ kube_version }}"
+kubernetesVersion: "v{{ kube_version }}"
 controlPlaneEndpoint: "{{ control_plane_endpoint }}:6443"
 certificatesDir: "{{ certificates_dir }}"
 imageRepository: "{{ image_repository }}"
